mensagem do commit 09/05

--- a/html/colecoes/itensAuto/itemMcLaren.html
+++ b/html/colecoes/itensAuto/itemMcLaren.html
@@ -44,9 +44,11 @@
                     <div class="collection-item">
                         <img src="../../../imagens/automotiva3.jpg" class="zoom-hover" id="itemImage" alt="Miniatura McLaren" />
                         <h3 id="nome">McLaren Supercarro Verde Militar</h3>
-                        <p id="peso"><strong>Peso:</strong> 100g</p>
                         <p id="desc"><strong>Detalhes:</strong> Miniatura de alta precisão da McLaren com portas tipo asa de gaivota, interior realista, rodas esportivas douradas e acabamento em verde militar. Item exclusivo para colecionadores avançados.</p>
+                        <p id="importancia"><strong>Importância:</strong> 9</p>
+                        <p id="peso"><strong>Peso:</strong> 100g</p>
                         <p id="valor"><strong>Valor:</strong> 100€.</p>
+                        <p id="data-aquisicao"><strong>Data de aquisição:</strong> 20 de março de 2025.</p>
                     </div>
                 </div>
             </section>
