--- a/html/colecoes/itensAuto/itemMiniCooper.html
+++ b/html/colecoes/itensAuto/itemMiniCooper.html
@@ -44,9 +44,11 @@
                     <div class="collection-item">
                         <img src="../../../imagens/automotiva1.jpg" class="zoom-hover" id="itemImage" alt="Mini-cooper em miniatura" />
                         <h3 id="nome">Mini-cooper Azul Metálico</h3>
-                        <p id="peso"><strong>Peso:</strong> 100g</p>
                         <p id="desc"><strong>Detalhes:</strong> Réplica fiel do modelo original com portas que abrem, rodas funcionais, pintura premium e acabamento interno detalhado. Ideal para colecionadores exigentes.</p>
+                        <p id="importancia"><strong>Importância:</strong> 8</p>
+                        <p id="peso"><strong>Peso:</strong> 100g</p>
                         <p id="valor"><strong>Valor:</strong> 100€.</p>
+                        <p id="data-aquisicao"><strong>Data de aquisição:</strong> 20 de março de 2025.</p>
                     </div>
                 </div>
             </section>
