--- a/html/colecoes/itensAuto/itemVolkswagenFusca.html
+++ b/html/colecoes/itensAuto/itemVolkswagenFusca.html
@@ -44,9 +44,11 @@
                     <div class="collection-item">
                         <img src="../../../imagens/automotiva2.jpg" class="zoom-hover" id="itemImage" alt="Volkswagen Fusca miniatura" />
                         <h3 id="nome">Volkswagen Fusca Clássico Vermelho</h3>
-                        <p id="peso"><strong>Peso:</strong> 100g</p>
                         <p id="desc"><strong>Detalhes:</strong> Miniatura do icônico Fusca com portas e capô móveis, pintura vermelha brilhante, e rodas com suspensão funcional. Um clássico para todos os colecionadores nostálgicos.</p>
+                        <p id="importancia"><strong>Importância:</strong> 10</p>
+                        <p id="peso"><strong>Peso:</strong> 100g</p>
                         <p id="valor"><strong>Valor:</strong> 100€.</p>
+                        <p id="data-aquisicao"><strong>Data de aquisição:</strong> 20 de março de 2025.</p>
                     </div>
                 </div>
             </section>
