--- a/html/colecoes/itensComic/itemHulkBatman.html
+++ b/html/colecoes/itensComic/itemHulkBatman.html
@@ -44,9 +44,11 @@
                     <div class="collection-item">
                         <img src="../../../imagens/comicBook3.jpg" id="imgItem" alt="Hulk & Batman" />
                         <h3 id="nome">Comic Book Hulk & Batman</h3>
-                        <p id="peso"><strong>Peso:</strong> 200g</p>
                         <p id="desc"><strong>Detalhes:</strong> Comic book clássico.</p>
+                        <p id="importancia"><strong>Importância:</strong> 8</p>
+                        <p id="peso"><strong>Peso:</strong> 200g</p>
                         <p id="valor"><strong>Valor:</strong> 100€.</p>
+                        <p id="data-aquisicao"><strong>Data de aquisição:</strong> 20 de março de 2025.</p>
                     </div>
                 </div>
             </section>
