--- a/html/colecoes/itensComic/itemTheXmen.html
+++ b/html/colecoes/itensComic/itemTheXmen.html
@@ -43,10 +43,12 @@
                 <div class="collection-container">
                     <div class="collection-item">
                         <img src="../../../imagens/comicBook2.jpg" id="imgItem" alt="The X-Men" />
-                        <h3 id="nome">Comic Book Hulk & Batman</h3>
-                        <p id="peso"><strong>Peso:</strong> 100g</p>
+                        <h3 id="nome">The X-Men</h3>
                         <p id="desc"><strong>Detalhes:</strong> Comic book clássico.</p>
+                        <p id="importancia"><strong>Importância:</strong> 10</p>
+                        <p id="peso"><strong>Peso:</strong> 100g</p>
                         <p id="valor"><strong>Valor:</strong> 100€.</p>
+                        <p id="data-aquisicao"><strong>Data de aquisição:</strong> 20 de março de 2025.</p>
                     </div>
                 </div>
             </section>
