--- a/html/utilizador.html
+++ b/html/utilizador.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="top-bar">
-                <div class="logo""><a href="../index.html">Coleção</a></div>
+                <div class="logo""><a href="index.html">Coleção</a></div>
                 <div class="search-bar">
                     <input type="text" placeholder="Search...">
                     <button>Search</button>
@@ -57,6 +57,11 @@
                 </form>
             </section>
         </main>
+        
+        <footer>
+            <hr class="colored-line">
+            <p style="text-align: center;">&copy; 2025 Portal do Colecionador. Todos os direitos reservados - Grupo3.</p>
+        </footer>
         
         <script src="../java/script.js"></script>
     </body>
