--- a/html/colecoes/itensComic/itemAvengers.html
+++ b/html/colecoes/itensComic/itemAvengers.html
@@ -44,9 +44,11 @@
                     <div class="collection-item">
                         <img src="../../../imagens/comicBook1.jpg" id="imgItem" alt="Avengers" />
                         <h3 id="nome">Avengers</h3>
-                        <p id="peso"><strong>Peso:</strong> 100g</p>
                         <p id="desc"><strong>Detalhes:</strong> Comic book do mais fomoso.</p>
+                        <p id="importancia"><strong>Importância:</strong> 9</p>
+                        <p id="peso"><strong>Peso:</strong> 100g</p>
                         <p id="valor"><strong>Valor:</strong> 100€.</p>
+                        <p id="data-aquisicao"><strong>Data de aquisição:</strong> 20 de março de 2025.</p>
                     </div>
                 </div>
             </section>
