--- a/html/colecoes.html
+++ b/html/colecoes.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="top-bar">
-                <div class="logo""><a href="colecoes.html">Coleção</a></div>
+                <div class="logo""><a href="index.html">Coleção</a></div>
                 <div class="search-bar">
                     <input type="text" placeholder="Search...">
                     <button>Search</button>
@@ -57,14 +57,12 @@
             <a href="colecoes/miniaturasAuto.html" class="collection-btn" style="background-image: url('../imagens/automotiva1.jpg');">
                 <p class="nome-colecao"><span>Miniaturas Automotivas</span></p>
                 <p class="tipo-colecao">Die-cast</p>
-                <p class="data-criacao">22 de março de 2025</p>
 
             </a>
 
             <a href="colecoes/comicBooks.html" class="collection-btn" style="background-image: url('../imagens/comicBook1.jpg');">
                 <p class="nome-colecao"><span>Comic Books</span></p>
                 <p class="tipo-colecao">Literária</p>
-                <p class="data-criacao">22 de março de 2025</p>
             </a>
         </div>
         
