--- a/html/colecoes/itensComic/itemAvengers.html
+++ b/html/colecoes/itensComic/itemAvengers.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="top-bar">
-                <div class="logo""><a href="../../index.html">Item</a></div>
+                <div class="logo"><a href="../../index.html">Item</a></div>
                 <div class="search-bar">
                     <input type="text" placeholder="Buscar..." />
                     <button>Buscar</button>
