--- a/html/colecoes.html
+++ b/html/colecoes.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="top-bar">
-                <div class="logo""><a href="index.html">Coleção</a></div>
+                <div class="logo"><a href="index.html">Coleção</a></div>
                 <div class="search-bar">
                     <input type="text" placeholder="Search...">
                     <button>Search</button>
@@ -19,13 +19,16 @@
             <nav class="navbar">
                 <ul class="nav-links">
                     <li class="nav-item dropdown">
+                        <a href="index.php">Início</a>
+                    </li>
+                    <li class="nav-item dropdown">
                         <a href="colecoes/miniaturasLocomotivas.html">Miniaturas Locomotivas</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="colecoes/comicBooks.html">Comic Books</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="eventos.html"">Eventos</a>
+                        <a href="eventos.html">Eventos</a>
                     </li>
                 </ul>
             </nav>
