--- a/html/colecoes/comicBooks.html
+++ b/html/colecoes/comicBooks.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="top-bar">
-                <div class="logo""><a href="../index.html">Coleção</a></div>
+                <div class="logo"><a href="../index.html">Coleção</a></div>
                 <div class="search-bar">
                     <input type="text" placeholder="Search...">
                     <button>Search</button>
@@ -19,6 +19,9 @@
             </div>
             <nav class="navbar">
                 <ul class="nav-links">
+                    <li class="nav-item dropdown">
+                        <a href="index.php">Início</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a href="miniaturasAuto.html">Miniaturas Automotivas</a>
                     </li>
