--- a/html/colecoes/miniaturasAuto.html
+++ b/html/colecoes/miniaturasAuto.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <div class="top-bar">
-                <div class="logo""><a href="../index.html">Coleção</a></div>
+                <div class="logo"><a href="../index.html">Coleção</a></div>
                 <div class="search-bar">
                     <input type="text" placeholder="Buscar...">
                     <button>Buscar</button>
@@ -17,6 +17,9 @@
             </div>
             <nav class="navbar">
                 <ul class="nav-links">
+                    <li class="nav-item dropdown">
+                        <a href="index.php">Início</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a href="colecoes/miniaturasAuto.html">Miniaturas Automotivas</a>
                     </li>
